force-app/main/default/objects/PS_Routing_Details__c/fields/Outside_Operation_Item__c.field-meta.xml
<CustomField>
    <fullName>Outside_Operation_Item__c</fullName>
    <label>Outside_Operation_Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>