force-app/main/default/objects/PS_Routing_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Descr__c</columns>
    <columns>Operation__c</columns>
    <columns>Standard_Operation_ID__c</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text6Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>NumVal1__c</columns>
    <columns>NumVal2__c</columns>
    <columns>Outside_Operation_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>